lab1/Test/L1-A-3-25.cmm
int d3I6wnd [ 2007962624 ] , fcULN9n &, ls_rERiGgcbWE1lKQ 
  [ 1992152950 ] [ 1826521619 ] [ 481860385 ] 


;
&%